--- a/portfolio-details-1.html
+++ b/portfolio-details-1.html
@@ -106,11 +106,11 @@
                         <div class="swiper-wrapper align-items-center">
 
                             <div class="swiper-slide">
-                                <img src="assets/img/portfolio/alfa1.jpg" alt="">
+                                <img src="assets/img/portfolio/p_1.jpg" alt="">
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="assets/img/portfolio/alfa2.jpg" alt="">
+                                <img src="assets/img/portfolio/p_2.jpg" alt="">
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
@@ -122,10 +122,8 @@
                         <h3>Информация о проекте</h3>
                         <ul>
                             <li><strong>Категория</strong>: Fullstack разработка личного кабинета</li>
-                            <li><strong>Заказчик</strong>: Альфабанк</li>
+                            <li><strong>Заказчик</strong>: Банк</li>
                             <li><strong>Дата</strong>: 2023</li>
-                            <li><strong>Ссылка</strong>: <a href="http://link.alfabank.ru/e2c">link.alfabank.ru</a>
-                            </li>
                         </ul>
                     </div>
                     <div class="portfolio-description">
