--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -105,11 +105,11 @@
                         <div class="swiper-wrapper align-items-center">
 
                             <div class="swiper-slide">
-                                <img src="assets/img/portfolio/alfa-b2c-1.jpg" alt="">
+                                <img src="assets/img/portfolio/b2c-1.jpg" alt="">
                             </div>
 
                             <div class="swiper-slide">
-                                <img src="assets/img/portfolio/alfa-b2c-2.jpg" alt="">
+                                <img src="assets/img/portfolio/b2c-2.jpg" alt="">
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
@@ -121,7 +121,7 @@
                         <h3>Информация о проекте</h3>
                         <ul>
                             <li><strong>Категория</strong>: Финансовый защищенный веб-сервис (API)</li>
-                            <li><strong>Заказчик</strong>: Альфабанк</li>
+                            <li><strong>Заказчик</strong>: Банк</li>
                             <li><strong>Дата</strong>: 2022-2023</li>
                         </ul>
                     </div>
