--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                     <img src="assets/img/profile-img-sm.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>Lead fullstack Java/Kotlin/Typescript/React web developer.</h3>
+                    <h3>Lead fullstack web developer.</h3>
                     <p class="fst-italic">
                         Разработчик с богатым опытом в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр.
-                        Эксперт по новейшим технологиям (особенно бэкенд), тех лид (неформально), ментор, автор профессиональных статей по разработке (на гитхаб).
-                        Люблю улучшать продукт с технической стороны, интегрировать новые инструменты,фреймворки и подходы, повышающие производительность системы вцелом.
+                        Эксперт по новейшим технологиям (особенно бэкенд, highload), тех лид, тим лид, ментор, автор профессиональных статей по разработке (на гитхаб).
+                        Люблю улучшать продукт с технической стороны, интегрировать новые инструменты, фреймворки и подходы, повышающие производительность системы вцелом.
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
