--- a/index.html
+++ b/index.html
@@ -236,12 +236,12 @@
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                     <h3 class="resume-title">Профессиональный опыт</h3>
                     <div class="resume-item">
-                        <h4>Senior java developer </h4>
+                        <h4>Tech lead java </h4>
                         <h5>Апрель 2022-по н.в.</h5>
                         <p><em>АргоСтудио (CodeItUp), Ярославль</em></p>
                         <p>
                             Коммерческая разработка банковских приложений, поддержка. Интервью разработчиков.
-                            Team/tech lead(неформально). Экспертиза по ключевым новым технологиям, консультирование.
+                            Senior Java Developer, Team/tech lead. Экспертиза по ключевым новым технологиям, консультирование.
                             Проекты:
                         </p>
                         <ul>
