--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
         <h1>Бальцер Артем</h1>
-        <p> <span class="typed" data-typed-items="Lead fullstack Java/Kotlin/Typescript/React web developer"></span></p>
+        <p> <span class="typed" data-typed-items="Lead fullstack web developer"></span></p>
     </div>
 </section><!-- End Hero -->
 
