--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                         <h4><p>Статьи по профессиональной java/javascript разработке</p></h4>
                         <h5>2023</h5>
                         <p><a href="https://habr.com/ru/articles/774322/">Разработка высоконагруженного игрового WebSocket сервера на Java, Netty с поддержкой BattleRoyale/Matchmaking</a></p>
+                        <p><a href="https://habr.com/ru/articles/800689/">Разработка высоконагруженного игрового WebSocket сервера на Kotlin, Webflux с поддержкой BattleRoyale/Matchmaking</a></p>
                         <p><a href="https://habr.com/ru/articles/771630/">Разработка браузерных игр с использованием Phaser3, React, Typescript</a></p>
                     </div>
                 </div>
