--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@
                         </p>
                         <ul>
                             <li>
+                                (Текущий проект) МосХаб/МосГит - Разработка внутренних высоконагруженных стриминговых сервисов
+                                асинхронного обмена сообщениями, поднятие/сопровождение/настройка k8s кластера - kafka/баз данных/keycloak, полный цикл разработки, настройка CI/CD
+                                Технический стек: Kotlin, Spring Boot, Spring webflux, OpenAPI, Kafka, Mongodb, Postgresql, Gitlab flow,
+                                Webservices, Keycloak, kubernetes, helm, security
+                            </li>
+                            <li>
                                 Платежи по номеру телефона СБП - B2C-направленная платежная система
                                 с более чем 8 различными микросервисами на банковской защищенной инфраструктуре.
 
