--- a/index.html
+++ b/index.html
@@ -242,13 +242,14 @@
                         <p><em>АргоСтудио (CodeItUp), Ярославль</em></p>
                         <p>
                             Коммерческая разработка банковских приложений, поддержка. Интервью разработчиков.
-                            Senior Java Developer, Team/tech lead. Экспертиза по ключевым новым технологиям, консультирование.
+                            Java tech lead. Экспертиза по ключевым новым технологиям, консультирование.
                             Проекты:
                         </p>
                         <ul>
                             <li>
                                 (Текущий проект) МосХаб/МосГит - Разработка внутренних высоконагруженных стриминговых сервисов
-                                асинхронного обмена сообщениями, поднятие/сопровождение/настройка k8s кластера - kafka/баз данных/keycloak, полный цикл разработки, настройка CI/CD
+                                асинхронного обмена сообщениями, поднятие/сопровождение/настройка k8s кластера - kafka/баз данных/keycloak, полный цикл разработки, настройка CI/CD.
+                                <br/>
                                 Технический стек: Kotlin, Spring Boot, Spring webflux, OpenAPI, Kafka, Mongodb, Postgresql, Gitlab flow,
                                 Webservices, Keycloak, kubernetes, helm, security
                             </li>
@@ -257,13 +258,16 @@
                                 с более чем 8 различными микросервисами на банковской защищенной инфраструктуре.
 
                                 Админ-панель контроля финансовых параметров (тарифы, лимиты и т.д.).
+                                <br/>
                                 Технический стек: Java, Kotlin, Spring Boot, Spring webflux, Spring banks starters,
                                 Webservices, Keycloak, kubernetes/maraphon, ansible scripts, security(tls 1.2, электронная подпись, java crypto), Typescript, React, Webpack, Npm
                             </li>
                             <li>
                                 Личный кабинет "Мгновенные выплаты" - E2C-направленный сервис, агрегирующий
                                 интегрированные платежные системы (в т.ч. B2C СБП), а также клиентское React/Typescript
-                                фронтенд приложение. Технический стек: Java, Kotlin, Spring boot,
+                                фронтенд приложение.
+                                <br/>
+                                Технический стек: Java, Kotlin, Spring boot,
                                 Spring webflux, Spring bank starters, (soap ws integration), Typescript, React.
                             </li>
                         </ul>
@@ -731,15 +735,23 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill">Kubernetes <i class="val">70%</i></span>
+                        <span class="skill">Kubernetes <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                 aria-valuemax="70"></div>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                 aria-valuemax="80"></div>
                         </div>
                     </div>
 
                     <div class="progress">
                         <span class="skill">Ansible <i class="val">100%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                                 aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <span class="skill">Helm <i class="val">100%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                                  aria-valuemax="100"></div>
