--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <h5>Апрель 2022-по н.в.</h5>
                         <p><em>АргоСтудио (CodeItUp), Ярославль</em></p>
                         <p>
-                            Коммерческая разработка банковских приложений, поддержка. Интервью разработчиков.
+                            Коммерческая разработка банковских приложений, высоконагруженных приложений для гос. сектора, поддержка. Интервью разработчиков.
                             Java tech lead. Экспертиза по ключевым новым технологиям, консультирование.
                             Проекты:
                         </p>
