--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h3>Lead fullstack web developer.</h3>
                     <p class="fst-italic">
                         Разработчик с богатым опытом в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр.
-                        Эксперт по новейшим технологиям (особенно бэкенд, highload), тех лид, тим лид, ментор, автор профессиональных статей по разработке (на гитхаб).
+                        Эксперт по новейшим технологиям (особенно бэкенд, highload), тех лид, тим лид, ментор, автор профессиональных статей по разработке, член ассоциации развития видеоигровой индустрии <a href="https://forgamedev.ru">forgamedev.ru</a>.
                         Люблю улучшать продукт с технической стороны, интегрировать новые инструменты, фреймворки и подходы, повышающие производительность системы вцелом.
                     </p>
                     <div class="row">
