--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                         <p><a href="https://habr.com/ru/articles/774322/">Разработка высоконагруженного игрового WebSocket сервера на Java, Netty с поддержкой BattleRoyale/Matchmaking</a></p>
                         <p><a href="https://habr.com/ru/articles/800689/">Разработка высоконагруженного игрового WebSocket сервера на Kotlin, Webflux с поддержкой BattleRoyale/Matchmaking</a></p>
                         <p><a href="https://habr.com/ru/articles/771630/">Разработка браузерных игр с использованием Phaser3, React, Typescript</a></p>
+                        <p><a href="https://habr.com/ru/articles/803969/">Развертывание защищенного dev кластера bitnami/kafka в k8s с помощью helm</a> </p>
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
