--- a/index.html
+++ b/index.html
@@ -177,24 +177,24 @@
                     <div class="name">
                         Система мгновенных платежей B2C/E2C
                     </div>
-                    <img src="assets/img/b2c-1.jpg" width="600" height="300" alt=""/>
-                    <img src="assets/img/b2c-2.jpg" width="600" height="300" alt=""/>
-                    <img src="assets/img/p_1.jpg" width="600" height="300" alt=""/>
-                    <img src="assets/img/p_2.jpg" width="600" height="400" alt=""/>
+                    <img src="assets/img/b2c-1.jpg" alt=""/>
+                    <img src="assets/img/b2c-2.jpg" alt=""/>
+                    <img src="assets/img/p_1.jpg" alt=""/>
+                    <img src="assets/img/p_2.jpg" alt=""/>
                 </div>
                 <div class="section__list-item">
                     <div class="name">
                         Есиа Каптча
                     </div>
-                    <img src="assets/img/esia-captcha.jpg" width="600" height="900" alt=""/>
+                    <img src="assets/img/esia-captcha.jpg"  alt=""/>
                 </div>
                 <div class="section__list-item">
                     <div class="name">
                         Игра (собственный коммерческий проект)
                     </div>
-                    <img src="assets/img/game1.jpg" width="600" height="300" alt=""/>
-                    <img src="assets/img/game2.jpg" width="600" height="300" alt=""/>
-                    <img src="assets/img/game3.jpg" width="600" height="300" alt=""/>
+                    <img src="assets/img/game1.jpg" alt=""/>
+                    <img src="assets/img/game2.jpg" alt=""/>
+                    <img src="assets/img/game3.jpg" alt=""/>
                     <video style="width:100%" autoplay muted  controls>
                         <source src="assets/video/20231004_165335.mp4" type="video/mp4">
                         Your browser does not support the video tag.
@@ -204,8 +204,8 @@
                     <div class="name">
                         Игра (демо для статьи)
                     </div>
-                    <img src="assets/img/game4.jpg" width="600" height="300" alt=""/>
-                    <img src="assets/img/game5.jpg" width="600" height="300" alt=""/>
+                    <img src="assets/img/game4.jpg" alt=""/>
+                    <img src="assets/img/game5.jpg"  alt=""/>
                     <video style="width:100%" autoplay muted  controls>
                         <source src="assets/video/20231004_170051.mp4" type="video/mp4">
                         Your browser does not support the video tag.
