--- a/index.html
+++ b/index.html
@@ -45,72 +45,47 @@
             <div class="section__title">Опыт</div>
             <div class="section__list">
                 <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">АргоСтудио (CodeItUp)</div>
-                        <div class="addr">Ярославль</div>
-                        <div class="duration">Апрель 2022-по н.в.</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Java/kotlin tech-lead</div>
-                        <div class="desc">Полный цикл разработки банковских приложений, высоконагруженных приложений для
-                            гос. сектора, поддержка. Интервью разработчиков.
-                            Java tech lead. Экспертиза по ключевым новым технологиям, консультирование. Dev-ops практики
-                            и сопровождение.
-                        </div>
+                    <div class="name">АргоСтудио (CodeItUp) - Java/kotlin tech-lead</div>
+                    <div class="addr">Ярославль</div>
+                    <div class="duration">Апрель 2022-по н.в.</div>
+                    <div class="desc">Полный цикл разработки банковских приложений, высоконагруженных приложений для
+                        гос. сектора, поддержка. Интервью разработчиков.
+                        Java tech lead. Экспертиза по ключевым новым технологиям, консультирование. Dev-ops практики
+                        и сопровождение.
                     </div>
                 </div>
                 <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">Usetech</div>
-                        <div class="addr">Москва</div>
-                        <div class="duration">Октябрь 2021-март 2022</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Старший java разработчик</div>
-                        <div class="desc">Проекты электронного правительства (ЕСИА). Внедрение новых
-                            практик/технологий.
-                        </div>
+                    <div class="name">Usetech - Старший java разработчик</div>
+                    <div class="addr">Москва</div>
+                    <div class="duration">Октябрь 2021-март 2022</div>
+                    <div class="desc">Проекты электронного правительства (ЕСИА). Внедрение новых
+                        практик/технологий.
                     </div>
                 </div>
                 <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">Nord Soft</div>
-                        <div class="addr">Ярославль</div>
-                        <div class="duration">Июль 2019-октябрь 2021</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Ведущий java разработчик</div>
-                        <div class="desc">Разработка коммерческого/бизнес АПИ для среднего бизнеса и государственных
-                            заказчиков (ЕМИАС). Документирование и воссоздание полумертвых легаси проектов.
-                        </div>
+                    <div class="name">Nord Soft - Ведущий java разработчик</div>
+                    <div class="addr">Ярославль</div>
+                    <div class="duration">Июль 2019-октябрь 2021</div>
+                    <div class="desc">Разработка коммерческого/бизнес АПИ для среднего бизнеса и государственных
+                        заказчиков (ЕМИАС). Документирование и воссоздание полумертвых легаси проектов.
                     </div>
                 </div>
                 <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">Алгоритм</div>
-                        <div class="addr">Ярославль</div>
-                        <div class="duration">Январь 2018-июль 2019</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Java разработчик</div>
-                        <div class="desc"> Поддержка и развитие приложений для МФЦ (панель оператора и электронная
-                            очередь).
-                            Fullstack разработка. Имплементация новых модулей и функционала.
-                        </div>
+                    <div class="name">Алгоритм - Java разработчик</div>
+                    <div class="addr">Ярославль</div>
+                    <div class="duration">Январь 2018-июль 2019</div>
+                    <div class="desc"> Поддержка и развитие приложений для МФЦ (панель оператора и электронная
+                        очередь).
+                        Fullstack разработка. Имплементация новых модулей и функционала.
                     </div>
                 </div>
                 <div class="section__list-item">
-                    <div class="left">
-                        <div class="name">Akcom.agency (UPWORK)</div>
-                        <div class="addr">Ярославль</div>
-                        <div class="duration">Июль 2015-Декабрь 2017</div>
-                    </div>
-                    <div class="right">
-                        <div class="name">Java разработчик</div>
-                        <div class="desc">UPWORK GAE/Adwords API/GWT/Google API fullstack разработка. Взаимодействие и
-                            консультирование
-                            клиентов из Европы(Британия, Швеция).
-                        </div>
+                    <div class="name">Akcom.agency (UPWORK) - Java разработчик</div>
+                    <div class="addr">Ярославль</div>
+                    <div class="duration">Июль 2015-Декабрь 2017</div>
+                    <div class="desc">UPWORK GAE/Adwords API/GWT/Google API fullstack разработка. Взаимодействие и
+                        консультирование
+                        клиентов из Европы(Британия, Швеция).
                     </div>
                 </div>
             </div>
@@ -119,9 +94,9 @@
             <div class="section__title">Образование</div>
             <div class="section__list">
                 <div class="section__list-item">
-                        <div class="name">
-                            2012 - 2016 ЯрГУ им. П.Г. Демидова Бакалавр компьютерных наук
-                        </div>
+                    <div class="name">
+                        2012 - 2016 ЯрГУ им. П.Г. Демидова Бакалавр компьютерных наук
+                    </div>
                 </div>
             </div>
         </div>
@@ -186,7 +161,7 @@
                     <div class="name">
                         Есиа Каптча
                     </div>
-                    <img src="assets/img/esia-captcha.jpg"  alt=""/>
+                    <img src="assets/img/esia-captcha.jpg" alt=""/>
                 </div>
                 <div class="section__list-item">
                     <div class="name">
@@ -195,7 +170,7 @@
                     <img src="assets/img/game1.jpg" alt=""/>
                     <img src="assets/img/game2.jpg" alt=""/>
                     <img src="assets/img/game3.jpg" alt=""/>
-                    <video style="width:100%" autoplay muted  controls>
+                    <video style="width:100%" autoplay muted controls>
                         <source src="assets/video/20231004_165335.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -205,8 +180,8 @@
                         Игра (демо для статьи)
                     </div>
                     <img src="assets/img/game4.jpg" alt=""/>
-                    <img src="assets/img/game5.jpg"  alt=""/>
-                    <video style="width:100%" autoplay muted  controls>
+                    <img src="assets/img/game5.jpg" alt=""/>
+                    <video style="width:100%" autoplay muted controls>
                         <source src="assets/video/20231004_170051.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
