--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                     <div class="addr">Ярославль</div>
                     <div class="duration">Апрель 2022-по н.в.</div>
                     <div class="desc">Полный цикл разработки банковских приложений, высоконагруженных приложений для
-                        гос. сектора, поддержка. Интервью разработчиков.
-                        Java tech lead. Экспертиза по ключевым новым технологиям, консультирование. Dev-ops практики
+                        гос. сектора, поддержка. Интервью разработчиков. Экспертиза по ключевым новым технологиям, консультирование. Dev-ops практики
                         и сопровождение.
                     </div>
                 </div>
@@ -58,7 +57,7 @@
                     <div class="name">Usetech - Старший java разработчик</div>
                     <div class="addr">Москва</div>
                     <div class="duration">Октябрь 2021-март 2022</div>
-                    <div class="desc">Проекты электронного правительства (ЕСИА). Внедрение новых
+                    <div class="desc">Проекты электронного правительства (ЕСИА - РТ Лабс). Внедрение новых
                         практик/технологий.
                     </div>
                 </div>
