--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="about">
             <span class="position">Senior java/kotlin fullstack developer</span>
-            <span class="desc">Разработчик с богатым опытом (более 9 лет) в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр.Эксперт по новейшим технологиям (особенно бэкенд, highload), тех лид, тим лид, ментор, автор профессиональных статей по разработке, член организации развития видеоигровой индустрии <a
+            <span class="desc">Разработчик с богатым опытом (более 9 лет) в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр. Эксперт по новейшим технологиям (особенно бэкенд, highload, realtime), тех лид, тим лид, ментор, автор профессиональных статей по разработке, член организации развития видеоигровой индустрии <a
                     href="https://forgamedev.ru">forgamedev.ru</a>.
       </span>
         </div>
@@ -49,7 +49,7 @@
                     <div class="addr">Ярославль</div>
                     <div class="duration">Апрель 2022-по н.в.</div>
                     <div class="desc">Полный цикл разработки банковских приложений, высоконагруженных приложений для
-                        гос. сектора, поддержка. Интервью разработчиков. Экспертиза по ключевым новым технологиям, консультирование. Dev-ops практики
+                        гос. сектора, поддержка. Интервью разработчиков. Экспертиза по ключевым новым технологиям, консультирование, участие в создании архитектуры систем совместно с аналитиками. Dev-ops практики
                         и сопровождение.
                     </div>
                 </div>
