--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="about">
-            <span class="position">Senior java/kotlin fullstack developer</span>
+            <span class="position">Java/kotlin fullstack developer</span>
             <span class="desc">Разработчик с богатым опытом (более 9 лет) в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр. Эксперт по новейшим технологиям (особенно бэкенд, highload, realtime), тех лид, тим лид, ментор, автор профессиональных статей по разработке, член организации развития видеоигровой индустрии <a
                     href="https://forgamedev.ru">forgamedev.ru</a>.
       </span>
