--- a/index.html
+++ b/index.html
@@ -35,9 +35,22 @@
 
         <div class="about">
             <span class="position">Java/kotlin fullstack developer</span>
-            <span class="desc">Разработчик с богатым опытом (более 9 лет) в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр. Эксперт по новейшим технологиям (особенно бэкенд, highload, realtime), тех лид, тим лид, ментор, автор профессиональных статей по разработке, член организации развития видеоигровой индустрии <a
-                    href="https://forgamedev.ru">forgamedev.ru</a>.
+            <span class="desc">Разработчик с богатым опытом (более 10 лет) в разработке коммерческих финтех, высоконагруженных, распределенных, высоковостребованных микросервисов и других различных приложений в т.ч. игр. Эксперт по новейшим технологиям (особенно бэкенд, highload, realtime), тех лид, тим лид, ментор.
       </span>
+            <div>
+                Достижения:
+                <ul>
+                    <li>Автор профессиональных статей, материалов по разработке.</li>
+                    <li>Член организации развития видеоигровой индустрии <a
+                            href="https://forgamedev.ru">forgamedev.ru</a>
+                    </li>
+                    <li>
+                        Успешная реализация многих проектов под ключ с нуля и доведение до промышленной среды,
+                        благодарности от коллег, руководства компаний.
+                    </li>
+                    <li>Собственный 2D мультиплеер и игровой сервер</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="details">
@@ -49,8 +62,18 @@
                     <div class="addr">Ярославль</div>
                     <div class="duration">Апрель 2022-по н.в.</div>
                     <div class="desc">Полный цикл разработки банковских приложений, высоконагруженных приложений для
-                        гос. сектора, поддержка. Интервью разработчиков. Экспертиза по ключевым новым технологиям, консультирование, участие в создании архитектуры систем совместно с аналитиками. Dev-ops практики
+                        гос. сектора, поддержка. Интервью разработчиков. Экспертиза по ключевым новым технологиям,
+                        консультирование, участие в создании архитектуры систем совместно с аналитиками. Dev-ops
+                        практики
                         и сопровождение.
+                    </div>
+                    <div class="desc-secondary accomplishments">
+                        Достижения:
+                        <ul>
+                            <li>Успешная реализация проектов. Благодарности от коллег, технического и генерального
+                                директора.
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="section__list-item">
@@ -59,6 +82,14 @@
                     <div class="duration">Октябрь 2021-март 2022</div>
                     <div class="desc">Проекты электронного правительства (ЕСИА - РТ Лабс). Внедрение новых
                         практик/технологий.
+                    </div>
+                    <div class="desc-secondary accomplishments">
+                        Достижения:
+                        <ul>
+                            <li>Успешная реализация проекта и оптимизация под высокую нагрузку.
+                                Благодарности от коллег и технического директора.
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="section__list-item">
@@ -104,7 +135,8 @@
             <div class="section__list">
                 <div class="section__list-item">
                     <div class="name">
-                        Java 22, Kotlin 1.9, C/C++, JavaScript, TypeScript, Spring, Spring (Boot, cloud, web, webflux,
+                        Java 22, Kotlin 1.9, C/C++, JavaScript, TypeScript, VertX, Spring, Spring (Boot, cloud, web,
+                        webflux,
                         data, etc),
                         HTML, CSS, Phaser 3, React, Angular, NodeJS, Webpack, NPM, Hibernate, JPA, PostgreSQL, MySQL,
                         MSSQL, MongoDB, ClickHouse, Redis, Kafka, RabbitMQ, OpenAPI, GraphQL, SOAP, Websocket,
