--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Достижения:
                 <ul>
                     <li>Автор профессиональных статей, материалов по разработке.</li>
-                    <li>Член организации развития видеоигровой индустрии <a
+                    <li>Член и эксперт организации развития видеоигровой индустрии <a
                             href="https://forgamedev.ru">forgamedev.ru</a>
                     </li>
                     <li>
